--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=gleisonfreireimpacta_devopslab
 sonar.organization=gleisonfreireimpactacloudlab
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=devopslab
+sonar.projectName=devopslab
 #sonar.projectVersion=1.0
 
 
