--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,13 +23,13 @@ jobs:
           python-version: '3.10'
 
       - name: Install Requirements
-        run:  pip install flask
+        run: pip install flask
 
       - name: Unit Test
         run: python -m unittest -v test
 
       - name: SonarCloud Scan
-        uses:  SonarSource/sonarqube-scan-action@v4  #https://github.com/marketplace/actions/official-sonarqube-scan
+        uses: SonarSource/sonarqube-scan-action@v4  # https://github.com/marketplace/actions/official-sonarqube-scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
@@ -51,7 +51,6 @@ jobs:
   Deploy:
     needs: Build
     runs-on: ubuntu-latest
-
     steps:
       - name: Download do Repositório
         uses: actions/checkout@v4       # https://github.com/actions/checkout
@@ -67,8 +66,25 @@ jobs:
         with:
           service: ${{ vars.GOOGLE_MYAPP }}
           region: ${{ vars.GOOGLE_REGION }}
-          image:   ${{ vars.GOOGLE_ARTIFACT }}/${{ vars.GOOGLE_PROJECT_ID }}/${{ vars.GOOGLE_REPONAME }}/${{ vars.GOOGLE_MYAPP }}:latest
+          image: ${{ vars.GOOGLE_ARTIFACT }}/${{ vars.GOOGLE_PROJECT_ID }}/${{ vars.GOOGLE_REPONAME }}/${{ vars.GOOGLE_MYAPP }}:latest
           flags: '--allow-unauthenticated'
 
       - name: Validando a API
         run: 'curl "${{ steps.deploy.outputs.url }}"'
+
+  DAST:
+    needs: Deploy
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
+
+    steps:
+      - name: Download do Repositório
+        uses: actions/checkout@v4       # https://github.com/actions/checkout
+
+      - name: DAST (ZAP Scan)
+        uses: zaproxy/action-full-scan@v0.12.0   # https://github.com/marketplace/actions/zap-full-scan
+        with:
+          target: 'https://gleisonfreire-fgxq5tbfwq-ue.a.run.app/'  # Substitua com a URL da sua aplicação
